# ChronOS

./: .editorconfig  .gitignore  AGENTS.md  ARCHITECT.md  ARCHITECTURE.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  HANDOFF.md  LICENSE  MEMORY.md  NOTICE  README.md  REWRITE_BY_PATTERN_AUDIT.md  SESSION_REPORT.md  SHADER_PORT_AUDIT.md  SOUL.md  STYLE.md  chronos_services_rewrite_cost_report.md  design.md  kael_motion_port_audit.md  roadmap.md
.github/workflows/: ci.yml
crates/app/: Cargo.toml
crates/app/examples/: status-printer.rs
crates/app/src/: assets.rs  bar.rs  lib.rs  main.rs  monitor.rs  plugin_bridge.rs  state.rs  theme_config.rs  wallpaper_ctl.rs
crates/app/src/bar/: mod.rs  sections.rs  widget.rs
crates/app/src/bar/widgets/: battery.rs  cava.rs  clock.rs  dock.rs  mod.rs  mpris.rs  network.rs  notification_bell.rs  project.rs  separator.rs  system.rs  tray.rs  updates.rs  volume.rs  workspaces.rs
crates/app/src/desktop_terminal/: mod.rs  view.rs
crates/app/src/dock/: config.rs  context_menu.rs  mod.rs  signal.rs  view.rs
crates/app/src/ipc/: messages.rs  mod.rs  service.rs
crates/app/src/launcher/: cache.rs  entry.rs  launch.rs  mod.rs  search.rs  view.rs
crates/app/src/notifications/: mod.rs  view.rs
crates/app/src/notifications/history_popup/: mod.rs  view.rs
crates/app/src/osd/: mod.rs  view.rs
crates/app/src/project_switcher/: mod.rs  view.rs
crates/app/src/side_panel_left/: chat_view.rs  composer.rs  hover_strip.rs  mod.rs  panel.rs  sessions_list.rs  state.rs  tool_card.rs
crates/app/src/side_panel_right/: disks.rs  header.rs  hover_strip.rs  mod.rs  mpris_card.rs  permission.rs  power_row.rs  rail.rs  spectrum_row.rs  tabs.rs  view.rs
crates/app/src/system_popup/: gaming_mode.rs  mod.rs  view.rs
crates/app/src/tray_menu/: mod.rs  view.rs
crates/app/src/updates_popup/: mod.rs  view.rs
crates/app/src/volume_popup/: mod.rs  view.rs
crates/hotview/: Cargo.toml
crates/hotview/src/: lib.rs
crates/luau/: Cargo.toml
crates/luau/src/: bar.rs  capabilities.rs  dsl.rs  lib.rs  manager.rs  sandbox.rs  watcher.rs
crates/luau/src/api/: bar.rs  events.rs  log.rs  mod.rs  mod_fs.rs  mod_ipc.rs  mod_net.rs  mod_process.rs  time.rs
crates/plugins/clock/: init.luau  manifest.toml
crates/services/: Cargo.toml
crates/services/examples/: applications-smoke.rs  audio-dispatch-smoke.rs  audio-smoke.rs  notification-smoke.rs  tray-live-check.rs  tray-menu-smoke.rs  tray-smoke.rs  wallpaper-smoke.rs
crates/services/src/: lib.rs  net_stats.rs
crates/services/src/applications/: mod.rs  types.rs
crates/services/src/audio/: mod.rs  pw_dump.rs  types.rs  wpctl.rs
crates/services/src/audio/fixtures/: pw_dump_sample.json
crates/services/src/aur/: mod.rs  types.rs
crates/services/src/brightness/: ddcutil.rs  mod.rs  types.rs
crates/services/src/cava/: mod.rs  types.rs
crates/services/src/compositor/: hyprland.rs  mod.rs  niri.rs  types.rs
crates/services/src/hermes_acp/: client.rs  mod.rs  registry.rs  session.rs  transport.rs
crates/services/src/mpris/: mod.rs  types.rs
crates/services/src/network/: mod.rs  types.rs
crates/services/src/notification/: mod.rs  types.rs
crates/services/src/power/: mod.rs
crates/services/src/system_resources/: mod.rs  types.rs
crates/services/src/tray/: menu.rs  mod.rs  types.rs
crates/services/src/udisks/: mod.rs  types.rs
crates/services/src/upower/: mod.rs  types.rs
crates/services/src/wallpaper/: mod.rs  types.rs
crates/ui/: Cargo.toml
crates/ui/src/: lib.rs
design/: Agent Panel.dc.html  Agent Thread.dc.html  Notifications Popup.dc.html  Project Switcher.dc.html  System Popup.dc.html  System Sidebar.dc.html  Top Bar.dc.html  Updates Popup.dc.html  Volume Popup.dc.html
docs/: index.html
docs/hyprland/: chronos-launcher.lua
docs/landing/: index.html
docs/superpowers/plans/: 2026-07-08-workspace-bar-mvp.md  2026-07-09-bar-scaffold-widget-contract.md  2026-07-10-services-layer.md  2026-07-20-right-side-panel.md  2026-07-23-left-agent-panel.md  2026-07-24-ide-panel-tab-container.md  2026-07-24-updates-popup-anchored-redesign.md
docs/superpowers/specs/: 2026-07-08-chronos-architecture-design.md  2026-07-09-bar-scaffold-widget-contract-design.md  2026-07-09-luau-plugin-layer-design.md  2026-07-10-services-layer-design.md  2026-07-20-right-side-panel-design.md  2026-07-23-left-agent-panel-design.md  2026-07-24-bar-widget-layout-config-design.md  2026-07-24-dev-hot-reload-bakeoff-design.md  2026-07-24-updates-popup-anchored-redesign-design.md
log-dump/: DECISIONS-001.md
orchestration/agents/: CLINE.md  HERMES.md
orchestration/report-log/: architect-report-philip-maintain.md  cline-report-rsx-vendor.md  deepseek-report-2.md  grok-report-19.md  hermes-report-18.md  hermes-report-19.md  hermes-report-21.md  hermes-report-22.md
orchestration/tasks/notes/: philip-report-maintain-2026-07-21.md
orchestration/tasks/report-log/: T062-gpui-rsx-vendor-report.md  T064-gpui-animation-vendor-report.md  T066-network-widget-rework-report.md  (+13 more)
skills/.obsidian/: workspace.json
skills/_notes/: architecture-crates-ui-discrepancy.md  checkpoint-skill.md  documentation-investigation-dead-links.md  engram-island.md
skills/chronos-gpui/: SKILL.md
skills/chronos-shell/: SKILL.md
skills/dispatching-parallel-agents/: SKILL.md
skills/documentation-investigation/: SKILL.md
skills/editing-skills/: SKILL.md
skills/evaluating-hot-reload-solutions/: SKILL.md
skills/fable/: SKILL.md
skills/gpui/: SKILL.md
skills/gpui-layer-shell/: SKILL.md
skills/hot-lib-reloader/: SKILL.md
skills/mcp-memory-workflow/: SKILL.md
skills/obsidian/: SKILL.md
skills/philip-main/: .gitignore  AGENTS.md  Audit.md  CONTEXT.md  DocTypes.md  Exploration.md  OrbitIntegration.md  PHILIP_IMPROVEMENT_REPORT.md  README.md  SKILL.md  Validation.md  Writing.md  package-lock.json  package.json
skills/start-here/: SKILL.md  SKILL.md.bak
skills/using-git-worktrees/: SKILL.md
skills/verification-before-completion/: SKILL.md
skills/writing-plans/: SKILL.md
skills/writing-skills/: SKILL.md
(+97 files in other folders)
