[workspace]
members = ["crates/app", "crates/hotview", "crates/luau", "crates/services", "crates/ui"]
resolver = "3"

[workspace.dependencies]
gpui = { git = "https://github.com/Dark-Ohm/Chronos-GPUI", rev = "99cab5e" }
gpui_platform = { git = "https://github.com/Dark-Ohm/Chronos-GPUI", rev = "99cab5e" }
gpui-rsx = { git = "https://github.com/Dark-Ohm/Chronos-GPUI", rev = "99cab5e" }
gpui-animation = { git = "https://github.com/Dark-Ohm/Chronos-GPUI", rev = "99cab5e" }
anyhow = "1.0.100"
tokio = { version = "1.44.1", features = ["rt-multi-thread", "macros", "time", "net", "sync", "io-util", "process"] }
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
futures-signals = "0.3.34"
futures-util = "0.3"
zbus = "5"
hyprland = "0.4.0-beta.3"
niri-ipc = "26"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
sysinfo = "0.39.3"
nvml-wrapper = "0.12.1"

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
unwrap_used = "warn"
expect_used = "warn"

[profile.release]
codegen-units = 1
lto = true
panic = "unwind"
opt-level = "z"
strip = true
debug = false
debug-assertions = false
overflow-checks = false
