[package]
name = "chronos"
version = "0.1.0"
edition = "2024"

[lib]
name = "chronos_app"
path = "src/lib.rs"

[[bin]]
name = "chronos"
path = "src/main.rs"

[dependencies]
gpui.workspace = true
gpui_platform.workspace = true
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures-signals.workspace = true
futures-util.workspace = true
chronos-luau = { path = "../luau" }
chronos-services = { path = "../services" }
chronos-ui = { path = "../ui" }
dirs = "6"
chrono.workspace = true
inotify = "0.11"
nucleo = "0.5.0"
image = "0.25"
smallvec = "1.6"
portable-pty = "0.9"
alacritty_terminal = "0.26"
toml = "0.8"
serde = { workspace = true, features = ["derive"] }
uuid = "1"
ashpd = { version = "0.13.13", default-features = false, features = ["async-io"] }
async-io = "2.6.0"

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }

[lints]
workspace = true
