[package]
name = "chronos-luau"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.10", features = ["luau", "vendored", "send"] }
gpui.workspace = true
toml = "0.8"
inotify = "0.11"
anyhow.workspace = true
dirs = "6"
tracing.workspace = true
serde = { version = "1", features = ["derive"] }
