[package]
name = "chronos-services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
crossbeam-channel = "0.5"
tokio.workspace = true
futures-signals.workspace = true
futures-util.workspace = true
zbus.workspace = true
enumflags2 = "0.7"
hyprland.workspace = true
niri-ipc.workspace = true
chrono.workspace = true
notify = { version = "8", features = ["crossbeam-channel"] }
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }

[dev-dependencies]
# futures-util from workspace provides StreamExt for tests
tracing-subscriber = { workspace = true }