[package]
name = "chronos-services"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow.workspace = true
tokio.workspace = true
futures-signals.workspace = true
futures-util.workspace = true
zbus.workspace = true
enumflags2 = "0.7"
hyprland.workspace = true
niri-ipc.workspace = true
chrono.workspace = true
notify = "8"
tracing.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sysinfo.workspace = true
nvml-wrapper.workspace = true
agent-client-protocol = "0.11.1"
agent-client-protocol-tokio = "0.11.1"

[dev-dependencies]
# futures-util from workspace provides StreamExt for tests
tracing-subscriber = { workspace = true }

[lints]
workspace = true